Development
	Add a couple of icons to the file menu
0.9.9.2
	Fix right click pause/play regression Bug #360
	Fix assertion in get_cover_art
	Updated Polish translation (some strings were overlooked in the previous update)
	Added Arabic, Catalan, Galician, Hebrew, Portuguese translations
	Handle aspect change during video playback
	Allow screen saver to activate when videos are paused
	Set media label width to window size, when embedded
	Fix fullscreen video size when in plugin mode
	Map "." to frame step, no backward step due to mplayer limitation
	Fix set_size_request warning
	Put make_button processing into the idle loop and ensure the button is always visible
	Return true in detect playlist on a uri with .m3u in the uri
	Add -softvol option to -volume detect code to keep from altering master volume
	Add album art lookup for some shoutcast stations
	Add melting of max values to audio meter
	Use patch by Fabio Scavone as a model to implement more accurate seeking from tracker
	Fix .spec.in file to account for new gnome-mplayer.xml file
	Fix problem problem with shoutcast playlists not autostarting
	Fix warning about invalid list iter
0.9.9
	Fix --without-gconf case in configure
	Account for store == NULL case
	Minor change to gnome-power-manager detection
	Source in gconf .m4 files only when we are using gconf
	Fix initial state of play/pause especially when playing shoutcast playlist
	Fix media_label width, which playing audio only
	Updated Polish translation
	Use -playlist fallback when mplayer doesn't
	Bump QuickTime emulation to 7.6.4
	Fix some problems with Apple.com HD trailers
	Fix problem with playstate tracking, observed by using mplayer from git
	Fix window size when playlist is shown and video not present
	Update playlist in header when item added to playlist
	Apply showcontrols default value patch
	Fix media title trim when long title and window is large bug #336
	Don't adjust mediasize when in fullscreen mode